# openapi/openapi.yml
@@ -84,7 +84,11 @@ paths:
                   type: string
       responses:
         '200':
-          description: '作成成功時'
+          description: 'タスク取得成功時'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Task'
         '400':
           description: '必要なパラメーターや入力内容に問題がある時'
         '401':
